--- a/backend/package.json
+++ b/backend/package.json
@@ -12,11 +12,11 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "fs": "^0.0.1-security",
-    "mysql": "^2.18.1",
+    "mysql2": "^3.6.3",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
