--- a/app/review-and-recommend/shopify.app.toml
+++ b/app/review-and-recommend/shopify.app.toml
@@ -2,7 +2,7 @@
 
 name = "review-and-recommend"
 client_id = "719d051c89168a8fca5449a95ca9a949"
-application_url = "https://aa01-2405-4802-1bf1-ba00-942e-b13b-faee-6bb1.ngrok-free.app"
+application_url = "https://d7d1-14-224-130-250.ngrok-free.app"
 embedded = true
 
 [access_scopes]
@@ -11,10 +11,10 @@ scopes = "read_products, write_products"
 
 [auth]
 redirect_urls = [
-  "https://aa01-2405-4802-1bf1-ba00-942e-b13b-faee-6bb1.ngrok-free.app/auth/callback",
-  "https://aa01-2405-4802-1bf1-ba00-942e-b13b-faee-6bb1.ngrok-free.app/auth/shopify/callback",
-  "https://aa01-2405-4802-1bf1-ba00-942e-b13b-faee-6bb1.ngrok-free.app/api/auth/callback",
-  "https://aa01-2405-4802-1bf1-ba00-942e-b13b-faee-6bb1.ngrok-free.app/.shopify/graphiql/auth/callback"
+  "https://d7d1-14-224-130-250.ngrok-free.app/auth/callback",
+  "https://d7d1-14-224-130-250.ngrok-free.app/auth/shopify/callback",
+  "https://d7d1-14-224-130-250.ngrok-free.app/api/auth/callback",
+  "https://d7d1-14-224-130-250.ngrok-free.app/.shopify/graphiql/auth/callback"
 ]
 
 [webhooks]
