--- a/app/review-and-recommend/shopify.app.toml
+++ b/app/review-and-recommend/shopify.app.toml
@@ -2,7 +2,7 @@
 
 name = "review-and-recommend"
 client_id = "719d051c89168a8fca5449a95ca9a949"
-application_url = "https://d6bb-123-24-142-251.ngrok-free.app"
+application_url = "https://4f84-2405-4802-1bf6-d0f0-ac53-5ae3-5ced-8f56.ngrok-free.app"
 embedded = true
 
 [access_scopes]
@@ -11,10 +11,10 @@ scopes = "read_products, write_products"
 
 [auth]
 redirect_urls = [
-  "https://d6bb-123-24-142-251.ngrok-free.app/auth/callback",
-  "https://d6bb-123-24-142-251.ngrok-free.app/auth/shopify/callback",
-  "https://d6bb-123-24-142-251.ngrok-free.app/api/auth/callback",
-  "https://d6bb-123-24-142-251.ngrok-free.app/.shopify/graphiql/auth/callback"
+  "https://4f84-2405-4802-1bf6-d0f0-ac53-5ae3-5ced-8f56.ngrok-free.app/auth/callback",
+  "https://4f84-2405-4802-1bf6-d0f0-ac53-5ae3-5ced-8f56.ngrok-free.app/auth/shopify/callback",
+  "https://4f84-2405-4802-1bf6-d0f0-ac53-5ae3-5ced-8f56.ngrok-free.app/api/auth/callback",
+  "https://4f84-2405-4802-1bf6-d0f0-ac53-5ae3-5ced-8f56.ngrok-free.app/.shopify/graphiql/auth/callback"
 ]
 
 [webhooks]
