--- a/backend/package.json
+++ b/backend/package.json
@@ -15,8 +15,10 @@
     "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "csv-parser": "^3.0.0",
+    "csv-writer": "^1.6.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "json2csv": "^6.0.0-alpha.2",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.3",
     "nodemon": "^3.0.1"
